--- a/website/index.html
+++ b/website/index.html
@@ -7,8 +7,10 @@
     <title>Vite App</title>
   </head>
   <body>
-    <h1>lmao</h1>
-    <div id="app"></div>
+    <canvas id="bg"></canvas>
+
+    <!-- <div id="app"></div> -->
+    
     <script type="module" src="/main.js"></script>
   </body>
 </html>
